# mcat

./: CHANGELOG.md  Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: catter.rs  config.rs  mcat_file.rs
crates/core/src/markdown_viewer/: mod.rs  render.rs  utils.rs
crates/core/tests/: output.rs  stdin.rs
crates/markdownify/: Cargo.toml
crates/markdownify/src/: lib.rs
crates/rasteroid/: Cargo.toml
crates/rasteroid/src/: term_misc.rs
