[package]
name = "rasteroid"
version = "0.1.8"
authors = ["Meron Bossin"]
description = "turn images / videos into inline content for you terminal (iterm / kitty / sixel)"
keywords = ["sixel", "iterm", "kitty", "terminal", "terminal-graphics"]
categories = ["graphics", "rendering", "command-line-utilities"]
repository = "https://github.com/Skardyy/mcat"
homepage = "https://github.com/Skardyy/mcat"
documentation = "https://github.com/Skardyy/mcat"
license = "MIT"
readme = "README.md"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
shared_memory = { git = "https://github.com/elast0ny/shared_memory" }
image = { version = "0.25.6", default-features = false, features = ["bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
color_quant = "1.1.0"
base64 = "0.22.1"
rand = "0.9.0"
fast_image_resize = { version = "~5.1.2", features = ["image"] }
signal-hook = "0.3.17"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
ffmpeg-sidecar = "2.0.5"
