[package]
name = "rasteroid"
version = "0.3.2"
authors = ["Meron Bossin"]
description = "terminal image / video graphics ( iterm / kitty / sixel )"
keywords = ["sixel", "iterm", "kitty", "terminal", "terminal-graphics"]
categories = ["graphics", "rendering", "command-line-utilities"]
repository = "https://github.com/Skardyy/mcat"
homepage = "https://github.com/Skardyy/mcat"
documentation = "https://github.com/Skardyy/mcat"
license = "MIT"
readme = "README.md"
edition = "2024"

[dependencies]
crossterm.workspace = true
image.workspace = true
color_quant.workspace = true
base64.workspace = true
rand.workspace = true
fast_image_resize.workspace = true
signal-hook.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
shared_memory_fork.workspace = true
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
ffmpeg-sidecar.workspace = true
